// 
// Example:
//   [*]Dec 2/2007
//   Joeku
//   This is an example entry.
// 
// The first line is the date, the second
// line is the author of the entry, and all lines
// afterward make up the body of the entry.
// 
// Blank and commented (starting with "//") lines
// will not be displayed in-game. Entries with fewer
// than three lines will not be displayed in-game.

[*]Jan 4, 2016
Victor
- Added command [MyStats to check your character stats.
- Added command [BondInfo to check how much time is left for a pet to get bonded.
- Added command [OrganizeMe to auto-organize items on your backpack.
- Polar bears are now rideble, so you can mount them.
- Maps will change seasons everytime the shard restarts.

[*]Jan 2, 2016
Victor
- Now players in the same party can see each other even when they are hidden.
- Now when you use [P without any argument, it shows your party fellows names and informs who is leading the party.
- Added command [ResetSkill to set a skill back to 0.

[*]Jan 1, 2016
Victor
- [Look command now shows health status below the profile description.
- Now the [AddToParty command will auto-invite if there's only one result on the player list filter.
- Convoke command now sends a message instead of showing an empty gump, if no users were found to convoke.
- Added alias [Forums to the command [Forum.
- Reward Vendor is now invulnerable, so players won't be able to kill them anymore.
- Now Recall and Gate Travel spells can be used by criminal players.
- Now [Autodefend just need to be disabled once if you don't like it. Next time you login, it will continue disabled until you enable it again.
- Fixed message that was telling the skillcap was 700 when you try to train with an npc and you have already reached the skillcap and has no skill set to down.

[*]Jan 1, 2016
Adrian
- Improved Poker Game System.

[*]Dec 31, 2015
Victor
- Now player loses karma when he cuts a human corpse in pieces.